// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionIcon should be match the snapshot 1`] = `
<styled.div>
  <Styled(IoIosStarOutline) />
</styled.div>
`;

exports[`ActionIcon should be match the snapshot when isIconActive 1`] = `
<styled.div>
  <Styled(IoIosStar) />
</styled.div>
`;
